# distributed-training-sandbox

./: .gitignore  00_introduction.ipynb  02-operations.ipynb  MODAL.md  README.md  RUN_MODAL.md  modal_utils.py  pyproject.toml
DDP/: .env.public  EXPERIMENTS.md  README.md  ddp.py  modal_app.py  requirements.image.txt  requirements.local.txt
DDP/scripts/: profile.sh
DDP/training_utils/: memory.py  trun.py  utils.py
fp8/: fp8_benchmark.py  modal_app.py  run_sweep.sh  utils.py  visualize_code.ipynb
fsdp/: modal_app.py  train_fsdp.py
pp/: 1f1b.py  README.md  gpipe.py  modal_app.py  requirements.txt
zero/: modal_app.py  requirements.txt  zero1.py  zero2.py  zero3.py
zero/training_utils/: utils.py
